--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,8 @@
                     <el-image v-if="imageUrl" :src="imageUrl" class="avatar" fit='contain'></el-image>
                     <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                 </el-upload>
+                <span  v-if="!imageUrl" style="font-size: 12px">max file size: 500 kb</span>
+                
                 <div v-if="imageUrl">
                 <span>Grid Size</span>
                 <el-slider
