--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,8 @@
                         :action="upload_url"
                         :show-file-list="false"
                         :on-success="handleUploadSuccess"
-                        :on-error="handleUploadError">
+                        :on-error="handleUploadError"
+                        :before-upload="validateFileSize">
                     <el-image v-if="imageUrl" :src="imageUrl" class="avatar" fit='contain'></el-image>
                     <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                 </el-upload>
@@ -53,11 +54,11 @@
 
                 <el-dialog
                     title="File Error"
-                    :visible.sync="fileToLargeDialog"
+                    :visible.sync="fileTooLargeDialog"
                     width="250px">
                     <span>File must be <b>< 500 kb !</b></span>
                     <span slot="footer" class="dialog-footer">
-                    <el-button @click="fileToLargeDialog = false">Close</el-button>
+                    <el-button @click="fileTooLargeDialog = false">Close</el-button>
                     </span>
                 </el-dialog>
 
@@ -152,18 +153,24 @@ new Vue({
         upload_url: "%%url_for('upload_file')%%",
         imageUrl: '',
         file_name: '',
-        fileToLargeDialog: false
+        fileTooLargeDialog: false
     },
     methods: {
-        submitUpload() {
-            this.$refs.upload.submit();
-        },
         handleUploadSuccess(response, file, fileList) {
             this.imageUrl = URL.createObjectURL(file.raw);
             this.file_name = response;
         },
         handleUploadError(response, file, fileList) {
-            this.fileToLargeDialog = true;
+            alert("An error occured during Upload");
+        },
+        validateFileSize(file) {
+            let FileSize = file.size / 1024; // in MB
+            if (FileSize > 500) {
+                this.fileTooLargeDialog = true;
+                return false;
+            } else {
+                return true;
+            }
         },
         loadConverted() {
             self = this;
