--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div id="app">
-<el-col :span="4">left</el-col>
+<el-col :span="4" style="color: white;">left</el-col>
 <el-col :span="16">
     <el-container>
         <el-header height="100px">
@@ -75,7 +75,7 @@
         </el-main>
     </el-container>
 </el-col>
-<el-col :span="4">right</el-col>
+<el-col :span="4" style="color: white;">right</el-col>
 </div>
 </body>
 
